# habit_tracker_api

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0aa333dd57d2_add_periodicity_and_reminder_time_to_.py  31e1b1fa6f6e_initial_migration.py  48b7145fb225_deleted_basemodelmixin.py  d208f630ccea_initial.py  df2ea3f78dcc_update_timestamps_with_func_now.py  e619316d9645_add_habit_model.py
app/: main.py
app/admin/: admin.py  views.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  habit.py
app/core/: config.py  database.py  deps.py  enums.py  exceptions.py  initializer.py  security.py
app/crud/: habit.py  user.py
app/models/: base.py  habit.py  user.py
app/schemas/: auth.py  habit.py  user.py
app/services/: auth.py  habit.py  user.py
docker/: .dockerignore  Dockerfile  Makefile  docker-compose.yaml
scripts/: init_db.py
src/api/: __init__.py  users.py
src/auth/: security.py
src/core/: base_model.py  config.py
src/db/: deps.py  session.py
src/models/: user.py
src/schemas/: user.py
